--- a/index.html
+++ b/index.html
@@ -2,11 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Electron + React + Node.js</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- ✅ SAFE CSP FOR ELECTRON + VITE -->
+    <meta http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self' data: file:;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval';
+        style-src 'self' 'unsafe-inline';
+      "
+    />
+
+    <title>Dr. Parihar’s Physiotherapy Clinic</title>
+    <style>
+      #loader {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: #0f172a;
+        color: white;
+        font-family: sans-serif;
+      }
+
+      .spinner {
+        width: 42px;
+        height: 42px;
+        border: 4px solid rgba(255,255,255,0.3);
+        border-top-color: white;
+        border-radius: 50%;
+        animation: spin 0.8s linear infinite;
+      }
+
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+    </style>
+
   </head>
   <body>
-    <div id="root"></div>
+    <!-- Loader -->
+  <div id="loader">
+    <div class="spinner"></div>
+    <p>Loading application…</p>
+  </div>
+
+    <!-- React root -->
+    <div id="root" style="display:none;"></div>
+
+    <!-- ✅ VITE WILL REPLACE THIS DURING BUILD -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
